MDEV-24331 mysqldump fails with "Got error: 1356" if the database contains a view with a subquery

detect derived tables differently. TABLE_LIST::is_derived()
only works after mysql_derived_init()