sql/sql_parse.cc
@@ -6639,7 +6639,7 @@ check_access(THD *thd, ulong want_access, const char *db, ulong *save_priv,
 bool check_single_table_access(THD *thd, ulong privilege, TABLE_LIST *tables,
                                bool no_errors)
 {
-  if (tables->is_derived())
+  if (tables->derived)
     return 0;
 
   Switch_to_definer_security_ctx backup_sctx(thd, tables);
